--- a/about.html
+++ b/about.html
@@ -14,6 +14,9 @@
     <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/about_styles.css">
+    <link rel="stylesheet" href="css/nav_style.css">
+        
+    </style>"
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,400italic,700&subset=latin,latin-ext"" type="text/css">
