--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/contact_styles.css">
+    <!-- nav bar stylesheet -->
+    <link rel="stylesheet" href="css/nav_style.css">
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,400italic,700,900&subset=latin,latin-ext" type="text/css">
@@ -26,7 +28,16 @@
 </head>
 
 <body>
-    <!--- page --->
+    <!-- page -->
+
+    <div class="nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </div> <!-- end class nav -->
+
     <!-- <div class="main"> -->
     <div class="container"> <!-- using bootstrap container div --> 
         <div class="border">
@@ -45,7 +56,7 @@
             </div>
             <!-- end div class left_col -->
 
-            <!--- vertical split --->
+            <!--- vertical split -->
 
             <div class="right_col">
                 <div class="address">
